# tw-stock-ai-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  enable-openai.cmd  package.json  setup-openai.ps1  start-stockai.cmd  stockai-app-hidden.vbs  stockai-app.ps1  stockai-native-app.cmd  stockai-native-app.ps1  stop-stockai.cmd
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/api/routes/: analysis.py  backtests.py  jobs.py  market.py  notifications.py  positions.py  radar.py  reports.py  watchlist.py
apps/api/app/core/: config.py  database.py
apps/api/app/models/: __init__.py  entities.py
apps/api/app/schemas/: __init__.py  analysis.py
apps/api/app/services/: ai_picker.py  analysis.py  backtest.py  calendar.py  future_outlook.py  indicators.py  industry.py  jobs.py  market_context.py  market_risk.py  market_scan.py  notifications.py  reports.py  sample_data.py  scoring.py  sentiment.py  source_quality.py
apps/api/app/services/data_providers/: __init__.py  base.py  cache.py  composite.py  finmind.py  twse.py  yahoo.py
apps/api/tests/: conftest.py  test_api.py  test_backtest.py  test_finmind_provider.py  test_indicators.py  test_industry.py  test_market_data_cache.py  test_notifications.py  test_reports.py  test_scoring.py  test_twse_provider.py
docs/: api-design.md  database-schema.md  design-target.md  linear-backlog.md  native-no-docker-plan.md  product-roadmap.md  user-personality-report.md
infra/: Dockerfile.api  Dockerfile.web
(+26 files in other folders)
