[project]
name = "tw-stock-ai-assistant-api"
version = "0.1.0"
description = "FastAPI backend for a Taiwan stock AI investment decision assistant."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14.0",
  "apscheduler>=3.10.4",
  "fastapi>=0.115.6",
  "httpx>=0.28.1",
  "numpy>=2.2.1",
  "openai>=1.58.1",
  "pandas>=2.2.3",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "python-multipart>=0.0.20",
  "reportlab>=4.2.5",
  "sqlalchemy>=2.0.36",
  "ta>=0.11.0",
  "uvicorn[standard]>=0.34.0",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
